--- a/new.html
+++ b/new.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>javascript</title>
     <style>
-        
+
     </style>
+    <script>
+        var output = prompt('입력', );
+        alert(typeof (output));
+    </script>
 </head>
+
 <body>
     <div></div>
 </body>
+
 </html>
